ConsultingHub/force-app/main/default/objects/Onboarding__c/Onboarding__c.object-meta.xml
<CustomObject>
    <label>Onboarding</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>