ConsultingHub/force-app/main/default/objects/Onboarding__c/fields/Actual_Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Availability_Date__c</fullName>
    <label>Actual Availability Date</label>
    <type>Date</type>
</CustomField>