ConsultingHub/force-app/main/default/objects/Onboarding__c/fields/Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>Availability_Date__c</fullName>
    <description>Date resource is available for staffing.</description>
    <inlineHelpText>Date resource is available for staffing.</inlineHelpText>
    <label>Availability Date</label>
    <type>Date</type>
</CustomField>