ConsultingHub/force-app/main/default/objects/Onboarding__c/fields/Percent_Learning_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percent_Learning_Complete__c</fullName>
    <description>Percentage of Allocated Learning Hours which are Completed</description>
    <formula>(Total_Actual_Time_Spent_Hours__c / Total_Estimated_Time_Required_Hours__c )*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Learning Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>