ConsultingHub/force-app/main/default/objects/Onboarding__c/fields/Recruiting_Channel__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Channel__c</fullName>
    <label>Recruiting Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pathfinder</fullName>
            </value>
            <value>
                <fullName>HBCU</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>NAACP</fullName>
            </value>
            <value>
                <fullName>RM App</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Recruiting Event</fullName>
            </value>
            <value>
                <fullName>NBSE</fullName>
            </value>
            <value>
                <fullName>Per Scholas</fullName>
            </value>
            <value>
                <fullName>PepUp Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>