ConsultingHub/force-app/main/default/objects/Onboarding__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associate Solution Consultant</fullName>
            </value>
            <value>
                <fullName>Solution Consultant</fullName>
            </value>
            <value>
                <fullName>Senior Solution Consultant</fullName>
            </value>
            <value>
                <fullName>Solution Architect</fullName>
            </value>
            <value>
                <fullName>Senior Solution Architect</fullName>
            </value>
            <value>
                <fullName>Associate Technical Consultant</fullName>
            </value>
            <value>
                <fullName>Technical Consultant</fullName>
            </value>
            <value>
                <fullName>Senior Technical Consultant</fullName>
            </value>
            <value>
                <fullName>Technical Architect</fullName>
            </value>
            <value>
                <fullName>Senior Technical Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>