ConsultingHub/force-app/main/default/objects/Onboarding__c/fields/Staffing_Readiness_Note__c.field-meta.xml
<CustomField>
    <fullName>Staffing_Readiness_Note__c</fullName>
    <label>Staffing Readiness Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>