ConsultingHub/force-app/main/default/objects/Onboarding__c/fields/Total_Actual_Time_Spent_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Time_Spent_Hours__c</fullName>
    <label>Total Actual Time Spent (Hours)</label>
    <summarizedField>Module__c.Actual_Hours_Spent__c</summarizedField>
    <summaryFilterItems>
        <field>Module__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Module__c.Onboarding__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>