ConsultingHub/force-app/main/default/objects/Onboarding__c/fields/Total_Estimated_Time_Required_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Time_Required_Hours__c</fullName>
    <label>Total Estimated Time Required (Hours)</label>
    <summarizedField>Module__c.Hours_Required__c</summarizedField>
    <summaryForeignKey>Module__c.Onboarding__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>