ConsultingHub/force-app/main/default/objects/Onboarding__c/fields/Trail_Guide__c.field-meta.xml
<CustomField>
    <fullName>Trail_Guide__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trail Guide</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>