ConsultingHub/force-app/main/default/objects/Onboarding__c/listViews/Active_Onboarding.listView-meta.xml
<ListView>
    <fullName>Active_Onboarding</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Expected_Completion_Date__c</columns>
    <columns>Cloud__c</columns>
    <columns>Percent_Learning_Complete__c</columns>
    <columns>Trail_Guide__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>Active Onboarding</label>
</ListView>