ConsultingHub/force-app/main/default/objects/Onboarding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Expected_Completion_Date__c</columns>
    <columns>Cloud__c</columns>
    <columns>Percent_Learning_Complete__c</columns>
    <columns>Trail_Guide__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>IA_Managers</group>
    </sharedTo>
</ListView>