ConsultingHub/force-app/main/default/objects/Onboarding__c/listViews/My_Onboarding.listView-meta.xml
<ListView>
    <fullName>My_Onboarding</fullName>
    <columns>NAME</columns>
    <columns>Availability_Date__c</columns>
    <columns>Expected_Completion_Date__c</columns>
    <columns>Cloud__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Status__c</columns>
    <columns>Trail_Guide__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Onboarding</label>
</ListView>