ConsultingHub/force-app/main/default/objects/Onboarding__c/listViews/Templates_and_Clones.listView-meta.xml
<ListView>
    <fullName>Templates_and_Clones</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Template,Clone</value>
    </filters>
    <label>Templates</label>
</ListView>